# STStat

./: .gitignore  Cargo.toml  README.md  installer.wxs  todo
src/: autostart.rs  bytes_format.rs  circlevec.rs  color.rs  main.rs  ohw.rs  process.rs  settings.rs  sidebar.rs  system_info.rs
src/components/: cpu.rs  edgy_progress.rs
src/widgets/: edgy_progress.rs  mod.rs
