[package]
name = "sidebar_slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
active-win-pos-rs = "0.7"
chrono = "0.4"
ctrlc = "3.2"
eframe = "0.21"
egui_extras = "0.21"
ekko = "0.7.2"
itertools = "0.10"
lazy_static = "1.4"
sysinfo = "0.28"
windows = { version = "0.46", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.11"
# slint = "0.3.5"
