[package]
name = "sidebar_slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
active-win-pos-rs = "0.7"
chrono = "0.4"
ctrlc = "3.2"
eframe = "0.21"
egui_extras = "0.21"
ekko = "0.7.2"
itertools = "0.10"
lazy_static = "1.4"
nvml-wrapper = "0.9.0"
reqwest = { version = "0.11.14", features = ["blocking", "serde_json", "json"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
sysinfo = "0.28"
windows = { version = "0.46", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation"
    ] }
winreg = "0.11"
# slint = "0.3.5"
