[package]
name = "ststat"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
active-win-pos-rs = "0.7"
chrono = "0.4"
ctrlc = "3"
display-info = "0.4"
eframe = "0.21"
egui_extras = "0.21"
ekko = "0.7"
itertools = "0.10"
lazy_static = "1"
nvml-wrapper = "0.9"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["blocking", "serde_json", "json"] }
self_update = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "process"] }
windows = { version = "0.48", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
] }
winreg = "0.50"
